--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   <!-- Header -->
   <header class="sticky top-0 z-50 backdrop-blur border-b border-slate-200/50 dark:border-slate-800/60 bg-white/70 dark:bg-slate-900/40">
     <div class="mx-auto max-w-7xl px-4 py-3 flex items-center gap-4">
-      <span class="font-extrabold tracking-tight">Maulik Mukund Shah</span>
+      <span class="font-extrabold tracking-tight">Kamal Thakor</span>
       <nav class="hidden md:flex gap-3 ml-4 text-sm">
-        <a href="#about" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">About</a>
-        <a href="#experience" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Experience</a>
-        <a href="#projects" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Projects</a>
-        <a href="#awards" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Awards</a>
-        <a href="#certs" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Certifications</a>
-        <a href="#skills" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Skills</a>
+        <a href="#summary" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Professional Summary</a>
+        <a href="#competencies" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Core Competencies</a>
+        <a href="#experience" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Work Experience</a>
+        <a href="#education" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Educational Qualifications</a>
+        <a href="#certs" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Certifications/Learnings</a>
+        <a href="#achievements" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Key Achievements</a>
         <a href="#fullcv" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Full CV</a>
         <a href="#contact" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Contact</a>
       </nav>
@@ -57,34 +57,29 @@
     <div class="md:col-span-7">
       <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">Kamal Thakor</h1>
       <p class="mt-3 text-lg opacity-90">Cybersecurity & Data Protection • Governance & Privacy • Solutions Architect • Senior Infrastructure Engineer • IT Consultant • Pre-Sales Consultant • Practice Lead • Cloud Migrations</p>
-      <p class="mt-5 text-base opacity-90 max-w-3xl">• Accomplished Data Protection & Infrastructure Solutions Architect and seasoned IT Consultant with over 17 years of global consulting experience across APJ, EMEA, and the Americas 
-• Expertise in backup & recovery, security, compliance, infrastructure modernization, and cloud security.
-• Proven ability to design and implement enterprise data protection strategies, aligning IT transformation with business objectives while ensuring compliance with industry security standards (GDPR, CDPA, NIST, PSI DSS, ISO 27001). 
-• Adept at working with cross-functional teams, executive stakeholders, and technology partners to drive innovation, optimize operational efficiency, and enhance data security resilience.
-• Demonstrated proficiency in conceptualizing and executing large-scale IT transformation initiatives focused on enhancing data protection frameworks.
-• Demonstrated mastery of Dell Data Protection solutions including Avamar, NetWorker, Data Domain, Cyber Recovery, Power Protect Data Manager, and Integrated Data Protection Appliance, complemented by a comprehensive understanding of Non-Dell offerings such as IBM Spectrum Protect / Protect Plus, Commvault, Rubrik, Cohesity, NetBackup, and Veeam.
-• Possess extensive experience with Microsoft Azure, Amazon Web Services (AWS), and Google Cloud Platform, particularly in integrating these platforms with Dell's Data Domain and backup products, including cloud tiering and cloud disaster recovery appliances.
-• Consistently recognized for surpassing client and project expectations, my performance has been acknowledged through multiple accolades attesting to my commitment to excellence.• Accomplished Data Protection & Infrastructure Solutions Architect and seasoned IT Consultant with over 17 years of global consulting experience across APJ, EMEA, and the Americas • Expertise in backup & recovery, security, compliance, infrastructure modernization, and cloud security. • Proven ability to design and implement enterprise data protection strategies, aligning IT transformation with business objectives while ensuring compliance with industry security standards (GDPR, CDPA, NIST, PSI DSS, ISO 27001). • Adept at working with cross-functional teams, executive stakeholders, and technology partners to drive innovation, optimize operational efficiency, and enhance data security resilience. • Demonstrated proficiency in conceptualizing and executing large-scale IT transformation initiatives focused on enhancing data protection frameworks. • Demonstrated mastery of Dell Data Protection solutions including Avamar, NetWorker, Data Domain, Cyber Recovery, Power Protect Data Manager, and Integrated Data Protection Appliance, complemented by a comprehensive understanding of Non-Dell offerings such as IBM Spectrum Protect / Protect Plus, Commvault, Rubrik, Cohesity, NetBackup, and Veeam. • Possess extensive experience with Microsoft Azure, Amazon Web Services (AWS), and Google Cloud Platform, particularly in integrating these platforms with Dell's Data Domain and backup products, including cloud tiering and cloud disaster recovery appliances. • Consistently recognized for surpassing client and project expectations, my performance has been acknowledged through multiple accolades attesting to my commitment to excellence.</p>
+      <p class="mt-5 text-base opacity-90 max-w-3xl">Accomplished Data Protection and Infrastructure Solutions Architect with over 17 years of global consulting experience across APJ, EMEA, and the Americas, specializing in backup and recovery, security, compliance, and cloud infrastructure modernization. I have a proven track record designing and implementing enterprise data protection strategies that align IT transformation with business objectives while meeting industry standards such as GDPR, NIST, and ISO 27001. Experienced with Dell and non-Dell solutions—including Avamar, NetWorker, Data Domain, Commvault, Rubrik, and Veeam—and skilled in integrating these with Azure, AWS, and GCP, I consistently deliver large-scale IT transformation initiatives that enhance operational efficiency, data security, and client satisfaction.</p>
       <div class="mt-6 flex flex-wrap gap-3">
-        <a href="#experience" class="px-5 py-2.5 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900 shadow">View Experience</a>
-        <a href="#projects" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">See Projects</a>
-        <a href="Maulik%20Shah.pdf" download="Maulik%20Shah.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
+        <a href="#experience" class="px-5 py-2.5 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900 shadow">View Professsional Experience</a>
+        <a href="#projects" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Core Competencies / Skills</a>
+        <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Resume - Kamal Thakor - Aug2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
       </div>
     </div>
     <div class="md:col-span-5">
       <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-6">
         <h3 class="font-semibold text-lg">Highlights</h3>
         <ul class="mt-4 space-y-2 text-sm">
-          <li>13.7+ years across Support • Dev • Automation</li>
-          <li>CTB/RTB ownership • Tier‑3 support • Resilience</li>
-          <li>Power Platform • .NET • Azure • SQL/Oracle</li>
-          <li>Process automation & incident reduction</li>
+          <li>• Pre-Sales & Customer Engagement – Solution workshops, PoCs, demos, RFP support, stakeholder influence</li>
+          <li>• Cloud & Hybrid Data Protection – Azure, AWS, GCP integration with Dell Data Domain & PPDM</li>
+          <li>• Data Protection Solutions – Dell (Avamar, NetWorker, Data Domain, PPDM, Cyber Recovery Vault), Commvault, Veeam, Rubrik, Cohesity, IBM Spectrum Protect</li>
+          <li>• Cybersecurity & Compliance – Cyber Recovery, CyberSense, Zero Trust frameworks, PCI, NIST, CIS</li>
+          <li>• Consulting & Delivery – Architecture design, migrations, large-scale implementations, escalation management</li>
+          <li>• Business Impact – Value-selling, ROI justification, executive presentations, risk reduction strategies</li>
         </ul>
       </div>
     </div>
   </section>
 
-  <!-- Experience -->
+  <!-- Professsional Experience -->
   <section id="experience" class="mx-auto max-w-7xl px-4 py-10">
     <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Experience Timeline</h2>
     <div class="mt-6 space-y-6">
