--- a/experience.html
+++ b/experience.html
@@ -3,42 +3,86 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Proportional Horizontal Timeline with Details</title>
+<title>Interactive Dark Timeline with Legend</title>
 <style>
   body {
     font-family: Arial, sans-serif;
+    background: #121212;
+    color: #e0e0e0;
     padding: 20px;
-    background: #f5f5f5;
   }
 
   h2 {
     text-align: center;
-    color: #0073e6;
+    color: #1e90ff;
+  }
+
+  /* Legend */
+  .legend {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    gap: 20px;
+  }
+
+  .legend-item {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 14px;
+    color: #e0e0e0;
+  }
+
+  .legend-color {
+    width: 16px;
+    height: 16px;
+    border-radius: 4px;
+    display: inline-block;
   }
 
   .timeline-wrapper {
     position: relative;
     width: 100%;
     overflow-x: auto;
-    padding: 60px 0 20px 0;
-    border-bottom: 3px solid #0073e6;
+    padding: 80px 0 20px 0;
+    border-bottom: 3px solid #1e90ff;
     white-space: nowrap;
-    height: 150px;
+    height: 250px;
+    background: #1c1c1c;
+    scroll-behavior: smooth;
   }
 
   .timeline-year {
-    display: inline-block;
-    width: 60px;
-    text-align: center;
-    font-size: 12px;
-    color: #333;
     position: absolute;
-    top: 100px;
+    top: 180px;
+    font-size: 12px;
+    color: #aaa;
+  }
+
+  .duration-bar {
+    position: absolute;
+    height: 20px;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  .duration-bar:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #1e90ff;
+    color: #fff;
+    padding: 3px 8px;
+    font-size: 12px;
+    border-radius: 4px;
+    white-space: nowrap;
+    z-index: 10;
   }
 
   .timeline-point {
     position: absolute;
-    top: 0;
     cursor: pointer;
     text-align: center;
     transition: transform 0.2s;
@@ -49,9 +93,10 @@
     height: 60px;
     object-fit: contain;
     border-radius: 50%;
-    border: 2px solid #0073e6;
+    border: 2px solid #1e90ff;
     margin-bottom: 5px;
     transition: transform 0.2s;
+    background: #121212;
   }
 
   .timeline-point:hover img {
@@ -61,36 +106,55 @@
   .timeline-point span {
     display: block;
     font-size: 12px;
-    color: #333;
     max-width: 100px;
+    color: #e0e0e0;
+  }
+
+  .timeline-point:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: 70px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #1e90ff;
+    color: #fff;
+    padding: 3px 8px;
+    font-size: 12px;
+    border-radius: 4px;
+    white-space: nowrap;
+    z-index: 10;
   }
 
   .details-container {
-    margin-top: 60px;
-    background: #fff;
+    margin-top: 40px;
+    background: #1c1c1c;
     padding: 20px;
     border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+    color: #e0e0e0;
   }
 
   .details-container h3 {
     margin-top: 0;
-    color: #0073e6;
+    color: #1e90ff;
   }
 
   .details-container ul {
     padding-left: 20px;
   }
-
 </style>
 </head>
 <body>
 
 <h2>Professional Experience Timeline (2000–2025)</h2>
 
-<div class="timeline-wrapper" id="timelineWrapper">
-  <!-- Year labels will be added dynamically -->
+<div class="legend">
+  <div class="legend-item"><span class="legend-color" style="background:#32cd32"></span> Implementation</div>
+  <div class="legend-item"><span class="legend-color" style="background:#1e90ff"></span> Architect</div>
+  <div class="legend-item"><span class="legend-color" style="background:#ff8c00"></span> Founder</div>
 </div>
+
+<div class="timeline-wrapper" id="timelineWrapper"></div>
 
 <div class="details-container" id="details">
   <h3>Click a timeline point to see details</h3>
@@ -98,118 +162,79 @@
 </div>
 
 <script>
-  const timelineWrapper = document.getElementById('timelineWrapper');
-  const details = document.getElementById('details');
+const timelineWrapper = document.getElementById('timelineWrapper');
+const details = document.getElementById('details');
 
-  const startYear = 2000;
-  const endYear = 2025;
-  const timelineWidth = 2000; // total width in pixels
+const startYear = 2000;
+const endYear = 2025;
+const timelineWidth = 2000; // px
+timelineWrapper.style.width = timelineWidth + "px";
 
-  // Generate year labels
-  for (let y = startYear; y <= endYear; y++) {
-    const yearDiv = document.createElement('div');
-    yearDiv.className = 'timeline-year';
-    yearDiv.style.left = ((y - startYear) / (endYear - startYear)) * timelineWidth - 15 + 'px';
-    yearDiv.innerText = y;
-    timelineWrapper.appendChild(yearDiv);
-  }
+// Role colors
+const roleColors = {
+  "Founder": "#ff8c00",
+  "Architect": "#1e90ff",
+  "Implementation": "#32cd32"
+};
 
-  // Timeline experiences
-  const experiences = [
-    {
-      title: "Technical Consultant / Implementation Specialist",
-      company: "EMC Thailand",
-      dates: "Sept 2006 – Oct 2007",
-      logo: "emc-thailand-logo.png",
-      startYear: 2006,
-      details: `<ul>
-        <li>Provided technical consultancy and delivered information protection solutions across APJ region.</li>
-        <li>Implemented NetWorker at PTT Thai Oil, Ministry of External Affairs, DTAC, True Move, Siam Pharmaceuticals, Mitsubishi Motors Ltd.</li>
-        <li>Implemented DiskXtender for UNIX/Linux at BAAC.</li>
-        <li>Developed Java code for file permissions before archiving using DiskXtender for a customer in Malaysia.</li>
-      </ul>`
-    },
-    {
-      title: "Implementation Delivery Specialist",
-      company: "EMC India",
-      dates: "Oct 2007 – Oct 2010",
-      logo: "emc-india-logo.png",
-      startYear: 2007,
-      details: `<ul>
-        <li>Deployed backup and recovery solutions for South Asia customers.</li>
-        <li>Implemented EMC products including NetWorker, Data Domain, Avamar, Data Protection Advisor, Homebase (BMR), EmailXtender (SourceOne), DiskExtender.</li>
-      </ul>`
-    },
-    {
-      title: "Senior Implementation Delivery Specialist",
-      company: "EMC Middle East",
-      dates: "Oct 2010 – Jul 2013",
-      logo: "emc-logo.png",
-      startYear: 2010,
-      details: `<ul>
-        <li>Implemented backup & recovery systems in GCC, ensured high customer satisfaction.</li>
-        <li>Collaborated with global EMC colleagues to resolve technical issues.</li>
-        <li>Identified client needs, assessed risks, and recommended appropriate solutions.</li>
-      </ul>`
-    },
-    {
-      title: "Senior Advisor / Senior Solutions Architect",
-      company: "Dell EMC Middle East",
-      dates: "Jul 2013 – Oct 2018",
-      logo: "dell-emc-logo.png",
-      startYear: 2013,
-      details: `<ul>
-        <li>Delivered tailored data protection solutions covering EMC and third-party products.</li>
-        <li>Integrated AI-focused initiatives for automation, predictive analytics, and threat detection.</li>
-        <li>Conducted POCs, mentored colleagues, and enhanced client operational efficiency.</li>
-        <li>Awarded Solution Architect of the Year (Gulf & Pakistan, 2014).</li>
-        <li>Led migration of applications to Google Cloud Platform, reducing operational costs by 30%.</li>
-      </ul>`
-    },
-    {
-      title: "Consultant Solutions Architect",
-      company: "Dell Technologies",
-      dates: "Oct 2018 – Apr 2024",
-      logo: "dell-logo.png",
-      startYear: 2018,
-      details: `<ul>
-        <li>Engaged clients for customized data protection solutions, hybrid cloud integration, and compliance frameworks.</li>
-        <li>Led pre-sales workshops and solution demos, improving adoption rates.</li>
-        <li>Integrated Generative AI solutions for automation, threat detection, and predictive analytics.</li>
-        <li>Designed and implemented Veeam with Data Domain backend for secure long-term retention.</li>
-        <li>Evangelized Dell solutions through webinars and industry events.</li>
-      </ul>`
-    },
-    {
-      title: "Founder & Principal Consultant",
-      company: "Vivanka Inc.",
-      dates: "Apr 2024 – Present",
-      logo: "vivanka-logo.png",
-      startYear: 2024,
-      details: `<ul>
-        <li>Consulting for Canadian enterprises on modernizing backup and cyber recovery strategies.</li>
-        <li>Led a 6-month engagement migrating legacy NetWorker environment, improving recovery SLAs.</li>
-        <li>Designed PPDM with Data Domain and cloud tier for cost-optimized long-term retention.</li>
-        <li>Executed multiple PPDM + Data Domain projects, integrating Azure cloud tier.</li>
-        <li>Delivered architecture sessions, workshops, and influenced Dell Technologies adoption.</li>
-      </ul>`
-    }
-  ];
+// Year labels
+for (let y = startYear; y <= endYear; y++) {
+  const yearDiv = document.createElement('div');
+  yearDiv.className = 'timeline-year';
+  yearDiv.style.left = ((y - startYear) / (endYear - startYear)) * timelineWidth - 15 + 'px';
+  yearDiv.innerText = y;
+  timelineWrapper.appendChild(yearDiv);
+}
 
-  // Add timeline points
-  experiences.forEach(exp => {
-    const point = document.createElement('div');
-    point.className = 'timeline-point';
-    point.style.left = ((exp.startYear - startYear) / (endYear - startYear)) * timelineWidth + 'px';
-    point.innerHTML = `
-      <img src="${exp.logo}" alt="${exp.company} Logo">
-      <span>${exp.company}</span>
-    `;
-    point.addEventListener('click', () => {
-      details.innerHTML = `<h3>${exp.title}</h3><h4>${exp.company} | ${exp.dates}</h4>${exp.details}`;
-    });
-    timelineWrapper.appendChild(point);
+// Experiences
+const experiences = [
+  { title: "Technical Consultant / Implementation Specialist", company: "EMC Thailand", startYear: 2006, endYear: 2007, roleType: "Implementation", logo: "emc-thailand-logo.png", details: `<ul><li>Provided technical consultancy and delivered solutions across APJ region.</li><li>Implemented NetWorker at multiple organizations.</li><li>Implemented DiskXtender for UNIX/Linux.</li><li>Developed Java code for file permissions before archiving.</li></ul>` },
+  { title: "Implementation Delivery Specialist", company: "EMC India", startYear: 2007, endYear: 2010, roleType: "Implementation", logo: "emc-india-logo.png", details: `<ul><li>Deployed backup & recovery solutions in South Asia.</li><li>Implemented NetWorker, Data Domain, Avamar, Data Protection Advisor, Homebase, EmailXtender, DiskExtender.</li></ul>` },
+  { title: "Senior Implementation Delivery Specialist", company: "EMC Middle East", startYear: 2010, endYear: 2013, roleType: "Implementation", logo: "emc-logo.png", details: `<ul><li>Implemented backup & recovery systems in GCC region.</li><li>Managed delivery, resolved issues, and recommended solutions.</li></ul>` },
+  { title: "Senior Advisor / Senior Solutions Architect", company: "Dell EMC Middle East", startYear: 2013, endYear: 2018, roleType: "Architect", logo: "dell-emc-logo.png", details: `<ul><li>Delivered tailored data protection solutions integrating AI.</li><li>Conducted POCs, mentored colleagues, improved operational efficiency.</li><li>Awarded Solution Architect of the Year 2014.</li><li>Migrated applications to GCP, reducing costs by 30%.</li></ul>` },
+  { title: "Consultant Solutions Architect", company: "Dell Technologies", startYear: 2018, endYear: 2024, roleType: "Architect", logo: "dell-logo.png", details: `<ul><li>Engaged clients for hybrid cloud integration and compliance.</li><li>Led pre-sales workshops and solution demos.</li><li>Integrated Generative AI for automation, threat detection, and predictive analytics.</li><li>Implemented Veeam with Data Domain backend for secure retention.</li></ul>` },
+  { title: "Founder & Principal Consultant", company: "Vivanka Inc.", startYear: 2024, endYear: 2025, roleType: "Founder", logo: "vivanka-logo.png", details: `<ul><li>Consulting for Canadian enterprises on modernizing backup and cyber recovery.</li><li>Led migration of legacy NetWorker environment.</li><li>Designed PPDM with Data Domain and cloud tier.</li><li>Delivered architecture sessions and workshops.</li></ul>` }
+];
+
+// Stack positions for overlapping roles
+const verticalOffsets = {};
+function getVerticalOffset(company) {
+  verticalOffsets[company] = (verticalOffsets[company] || 0) + 1;
+  return verticalOffsets[company] * 70;
+}
+
+// Add bars and points with color coding
+experiences.forEach(exp => {
+  const left = ((exp.startYear - startYear) / (endYear - startYear)) * timelineWidth;
+  const right = ((exp.endYear - startYear) / (endYear - startYear)) * timelineWidth;
+  const width = right - left;
+  const topOffset = getVerticalOffset(exp.company);
+
+  const color = roleColors[exp.roleType] || "#1e90ff";
+
+  // Duration bar
+  const bar = document.createElement('div');
+  bar.className = 'duration-bar';
+  bar.style.left = left + 'px';
+  bar.style.width = width + 'px';
+  bar.style.top = topOffset + 'px';
+  bar.style.backgroundColor = color + "88"; // semi-transparent
+  bar.setAttribute('data-tooltip', `${exp.roleType}: ${exp.startYear} – ${exp.endYear}`);
+  timelineWrapper.appendChild(bar);
+
+  // Timeline point
+  const point = document.createElement('div');
+  point.className = 'timeline-point';
+  point.style.left = left + 'px';
+  point.style.top = (topOffset - 40) + 'px';
+  point.setAttribute('data-tooltip', `${exp.roleType}: ${exp.startYear} – ${exp.endYear}`);
+  point.innerHTML = `<img src="${exp.logo}" alt="${exp.company} Logo" style="border-color:${color}"><span>${exp.company}</span>`;
+  point.addEventListener('click', () => {
+    details.innerHTML = `<h3>${exp.title}</h3><h4>${exp.company} | ${exp.startYear} – ${exp.endYear}</h4>${exp.details}`;
+    point.scrollIntoView({behavior: 'smooth', inline: 'center'});
   });
+  timelineWrapper.appendChild(point);
+});
 </script>
 
 </body>
