--- a/experience.html
+++ b/experience.html
@@ -3,174 +3,189 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Interactive Animated Timeline</title>
+<title>Interactive Timeline CV</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #121212;
-    color: #e0e0e0;
-    padding: 20px;
-  }
-
-  h2 {
-    text-align: center;
-    color: #1e90ff;
-  }
-
-  .legend {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-    gap: 20px;
-  }
-
-  .legend-item {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    font-size: 14px;
-    color: #e0e0e0;
-  }
-
-  .legend-color {
-    width: 16px;
-    height: 16px;
-    border-radius: 4px;
-    display: inline-block;
-  }
-
+body {
+  font-family: Arial, sans-serif;
+  background: #121212;
+  color: #e0e0e0;
+  margin: 0;
+  padding: 20px;
+}
+h2 {
+  text-align: center;
+  color: #1e90ff;
+  margin-bottom: 10px;
+}
+.legend {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  gap: 20px;
+}
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 14px;
+  color: #e0e0e0;
+}
+.legend-color {
+  width: 16px;
+  height: 16px;
+  border-radius: 4px;
+  display: inline-block;
+}
+.year-overview {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  gap: 5px;
+  transform-origin: left center;
+}
+.year-overview button {
+  background: #1c1c1c;
+  color: #aaa;
+  border: 1px solid #333;
+  padding: 4px 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 12px;
+}
+.year-overview button:hover {
+  background: #1e90ff;
+  color: #fff;
+}
+.timeline-container {
+  overflow-x: auto;
+  position: relative;
+  padding: 80px 0 80px 0;
+  background: #1c1c1c;
+  border-bottom: 3px solid #1e90ff;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+}
+.timeline-wrapper {
+  position: relative;
+  white-space: nowrap;
+  height: 250px;
+  transform-origin: left center;
+}
+.timeline-year {
+  position: absolute;
+  top: 180px;
+  font-size: 12px;
+  color: #aaa;
+  transform-origin: left center;
+}
+.duration-bar, .timeline-point {
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: all 0.6s ease-out;
+}
+.duration-bar.visible, .timeline-point.visible {
+  opacity: 1;
+  transform: translateX(0);
+}
+.duration-bar {
+  position: absolute;
+  height: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  scroll-snap-align: start;
+}
+.timeline-point {
+  position: absolute;
+  cursor: pointer;
+  text-align: center;
+  transition: transform 0.2s;
+}
+.timeline-point img {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+  border-radius: 50%;
+  border: 2px solid #1e90ff;
+  margin-bottom: 5px;
+  transition: transform 0.2s;
+  background: #121212;
+}
+.timeline-point:hover img {
+  transform: scale(1.2);
+}
+.timeline-point span {
+  display: block;
+  font-size: 12px;
+  max-width: 100px;
+  color: #e0e0e0;
+}
+.timeline-point::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #1e90ff;
+  color: #fff;
+  padding: 3px 8px;
+  font-size: 12px;
+  border-radius: 4px;
+  white-space: nowrap;
+  display: none;
+  z-index: 10;
+}
+.timeline-point:hover::after {
+  display: block;
+}
+.popup {
+  position: absolute;
+  max-width: 300px;
+  background: #1c1c1c;
+  padding: 15px;
+  border-radius: 8px;
+  border: 2px solid #1e90ff;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.7);
+  z-index: 100;
+  color: #e0e0e0;
+}
+.popup h3 {
+  margin: 0 0 5px 0;
+  font-size: 16px;
+  color: #1e90ff;
+}
+.popup h4 {
+  margin: 0 0 10px 0;
+  font-size: 14px;
+  color: #fff;
+}
+.popup ul {
+  padding-left: 20px;
+  margin: 0;
+}
+svg.connectors {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 768px) {
   .timeline-wrapper {
-    position: relative;
-    width: 100%;
-    overflow-x: auto;
-    padding: 80px 0 40px 0;
-    border-bottom: 3px solid #1e90ff;
-    white-space: nowrap;
-    height: auto;
-    background: #1c1c1c;
-    scroll-behavior: smooth;
+    height: 300px;
+    padding-bottom: 80px;
   }
-
-  .timeline-year {
-    position: absolute;
-    top: 180px;
-    font-size: 12px;
-    color: #aaa;
-  }
-
-  .duration-bar, .timeline-point {
-    opacity: 0;
-    transform: translateX(-100px);
-    transition: all 0.6s ease-out;
-  }
-
-  .duration-bar.visible, .timeline-point.visible {
-    opacity: 1;
-    transform: translateX(0);
-  }
-
-  .duration-bar {
-    position: absolute;
-    height: 20px;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-
-  .timeline-point {
-    position: absolute;
-    cursor: pointer;
-    text-align: center;
-    transition: transform 0.2s;
-  }
-
   .timeline-point img {
-    width: 60px;
-    height: 60px;
-    object-fit: contain;
-    border-radius: 50%;
-    border: 2px solid #1e90ff;
-    margin-bottom: 5px;
-    transition: transform 0.2s;
-    background: #121212;
+    width: 50px;
+    height: 50px;
   }
-
-  .timeline-point:hover img {
-    transform: scale(1.2);
-  }
-
-  .timeline-point span {
-    display: block;
-    font-size: 12px;
-    max-width: 100px;
-    color: #e0e0e0;
-  }
-
-  .timeline-point::after {
-    content: attr(data-tooltip);
-    position: absolute;
-    bottom: 70px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #1e90ff;
-    color: #fff;
-    padding: 3px 8px;
-    font-size: 12px;
-    border-radius: 4px;
-    white-space: nowrap;
-    display: none;
-    z-index: 10;
-  }
-
-  .timeline-point:hover::after {
-    display: block;
-  }
-
   .popup {
-    position: absolute;
-    max-width: 300px;
-    background: #1c1c1c;
-    padding: 15px;
-    border-radius: 8px;
-    border: 2px solid #1e90ff;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.7);
-    z-index: 100;
-    color: #e0e0e0;
+    max-width: 250px;
+    font-size: 12px;
   }
-
-  .popup h3 {
-    margin: 0 0 5px 0;
-    font-size: 16px;
-    color: #1e90ff;
-  }
-
-  .popup h4 {
-    margin: 0 0 10px 0;
-    font-size: 14px;
-    color: #fff;
-  }
-
-  .popup ul {
-    padding-left: 20px;
-    margin: 0;
-  }
-
-  @media (max-width: 768px) {
-    .timeline-wrapper {
-      height: 300px;
-      padding-bottom: 80px;
-    }
-
-    .timeline-point img {
-      width: 50px;
-      height: 50px;
-    }
-
-    .popup {
-      max-width: 250px;
-      font-size: 12px;
-    }
-  }
+}
 </style>
 </head>
 <body>
@@ -180,54 +195,80 @@
 <div class="legend">
   <div class="legend-item"><span class="legend-color" style="background:#32cd32"></span> Implementation</div>
   <div class="legend-item"><span class="legend-color" style="background:#1e90ff"></span> Architect</div>
-  <div class="legend-item"><span class="legend-color" style="background:#ff8c00"></span> Founder & Principal Consultant</div>
+  <div class="legend-item"><span class="legend-color" style="background:#ff8c00"></span> Founder</div>
 </div>
 
-<div class="timeline-wrapper" id="timelineWrapper"></div>
+<div class="year-overview" id="yearOverview"></div>
+
+<div class="timeline-container" id="timelineContainer">
+  <div class="timeline-wrapper" id="timelineWrapper"></div>
+  <svg class="connectors" id="connectorSvg"></svg>
+</div>
 
 <script>
 const timelineWrapper = document.getElementById('timelineWrapper');
+const timelineContainer = document.getElementById('timelineContainer');
+const connectorSvg = document.getElementById('connectorSvg');
+const yearOverview = document.getElementById('yearOverview');
 
 const startYear = 2005;
 const endYear = 2025;
-const timelineWidth = 2000;
-timelineWrapper.style.width = timelineWidth + "px";
 
-// Role colors
 const roleColors = {
   "Founder": "#ff8c00",
   "Architect": "#1e90ff",
   "Implementation": "#32cd32"
 };
 
+const experiences = [
+  { title: "Technical Consultant / Implementation Specialist", company: "EMC Thailand", startYear: 2006, endYear: 2007, roleType: "Implementation", logo: "emc-thailand-logo.png", details: `<ul><li>Provided technical consultancy and delivered solutions across APJ region.</li></ul>` },
+  { title: "Implementation Delivery Specialist", company: "EMC India", startYear: 2007, endYear: 2010, roleType: "Implementation", logo: "emc-india-logo.png", details: `<ul><li>Deployed backup & recovery solutions in South Asia.</li></ul>` },
+  { title: "Senior Implementation Delivery Specialist", company: "EMC Middle East", startYear: 2010, endYear: 2013, roleType: "Implementation", logo: "emc-logo.png", details: `<ul><li>Implemented backup & recovery systems in GCC region.</li></ul>` },
+  { title: "Senior Advisor / Senior Solutions Architect", company: "Dell EMC Middle East", startYear: 2013, endYear: 2018, roleType: "Architect", logo: "dell-emc-logo.png", details: `<ul><li>Delivered tailored data protection solutions integrating AI.</li></ul>` },
+  { title: "Consultant Solutions Architect", company: "Dell Technologies", startYear: 2018, endYear: 2024, roleType: "Architect", logo: "dell-logo.png", details: `<ul><li>Engaged clients for hybrid cloud integration and compliance.</li></ul>` },
+  { title: "Founder & Principal Consultant", company: "Vivanka Inc.", startYear: 2024, endYear: 2025, roleType: "Founder", logo: "vivanka-logo.png", details: `<ul><li>Consulting for Canadian enterprises on modernizing backup and cyber recovery.</li></ul>` }
+];
+
+function yearToLeft(year) {
+  const containerWidth = Math.max(timelineWrapper.clientWidth, window.innerWidth);
+  return ((year - startYear) / (endYear - startYear)) * (containerWidth - 100) + 50;
+}
+
+// Create year overview buttons
+for (let y = startYear; y <= endYear; y++) {
+  const btn = document.createElement('button');
+  btn.innerText = y;
+  btn.addEventListener('click', () => {
+    timelineContainer.scrollTo({
+      left: yearToLeft(y) - 50,
+      behavior: 'smooth'
+    });
+  });
+  yearOverview.appendChild(btn);
+}
+
 // Year labels
 for (let y = startYear; y <= endYear; y++) {
   const yearDiv = document.createElement('div');
   yearDiv.className = 'timeline-year';
-  yearDiv.style.left = ((y - startYear) / (endYear - startYear)) * timelineWidth - 15 + 'px';
+  yearDiv.style.left = yearToLeft(y) - 15 + 'px';
   yearDiv.innerText = y;
   timelineWrapper.appendChild(yearDiv);
 }
 
-// Experiences
-const experiences = [
-  { title: "Technical Consultant / Implementation Specialist", company: "EMC Thailand", startYear: 2006, endYear: 2007, roleType: "Implementation", logo: "images/emc-logo.png", details: `<ul><li>Provided technical consultancy and delivered solutions across APJ region.</li><li>Implemented NetWorker at multiple organizations.</li></ul>` },
-  { title: "Implementation Delivery Specialist", company: "EMC India", startYear: 2007, endYear: 2010, roleType: "Implementation", logo: "images/emc-logo.png", details: `<ul><li>Deployed backup & recovery solutions in South Asia.</li></ul>` },
-  { title: "Senior Implementation Delivery Specialist", company: "EMC Middle East", startYear: 2010, endYear: 2013, roleType: "Implementation", logo: "images/emc-logo.png", details: `<ul><li>Implemented backup & recovery systems in GCC region.</li></ul>` },
-  { title: "Senior Advisor / Senior Solutions Architect", company: "Dell EMC Middle East", startYear: 2013, endYear: 2018, roleType: "Architect", logo: "images/dell-logo.png", details: `<ul><li>Delivered tailored data protection solutions integrating AI.</li></ul>` },
-  { title: "Consultant Solutions Architect", company: "Dell Technologies", startYear: 2018, endYear: 2024, roleType: "Architect", logo: "images/dell-logo.png", details: `<ul><li>Engaged clients for hybrid cloud integration and compliance.</li></ul>` },
-  { title: "Founder & Principal Consultant", company: "Vivanka Inc.", startYear: 2024, endYear: 2025, roleType: "Founder", logo: "images/vivanka-logo.png", details: `<ul><li>Consulting for Canadian enterprises on modernizing backup and cyber recovery.</li></ul>` }
-];
-
+// Vertical offsets for overlapping
 const verticalOffsets = {};
 function getVerticalOffset(company) {
   verticalOffsets[company] = (verticalOffsets[company] || 0) + 1;
   return verticalOffsets[company] * 70;
 }
 
+// Store points for curved connectors
+const companyPoints = {};
+
 experiences.forEach(exp => {
-  const left = ((exp.startYear - startYear) / (endYear - startYear)) * timelineWidth;
-  const right = ((exp.endYear - startYear) / (endYear - startYear)) * timelineWidth;
+  const left = yearToLeft(exp.startYear);
+  const right = yearToLeft(exp.endYear);
   const width = right - left;
   const topOffset = getVerticalOffset(exp.company);
   const color = roleColors[exp.roleType] || "#1e90ff";
@@ -237,7 +278,7 @@ experiences.forEach(exp => {
   bar.style.left = left + 'px';
   bar.style.width = width + 'px';
   bar.style.top = topOffset + 'px';
-  bar.style.backgroundColor = color + "88"; 
+  bar.style.backgroundColor = color + "88";
   bar.setAttribute('data-tooltip', `${exp.roleType}: ${exp.startYear} – ${exp.endYear}`);
   timelineWrapper.appendChild(bar);
 
@@ -269,7 +310,6 @@ experiences.forEach(exp => {
     }
   });
 
-  // Animate on scroll
   const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
       if (entry.isIntersecting) {
@@ -281,6 +321,99 @@ experiences.forEach(exp => {
 
   observer.observe(bar);
   observer.observe(point);
+
+  if (!companyPoints[exp.company]) companyPoints[exp.company] = [];
+  companyPoints[exp.company].push({ x: left + 30, y: topOffset, color });
+});
+
+// Draw curved connectors
+for (const company in companyPoints) {
+  const points = companyPoints[company];
+  if (points.length > 1) {
+    for (let i = 0; i < points.length - 1; i++) {
+      const path = document.createElementNS("http://www.w3.org/2000/svg","path");
+      const start = points[i];
+      const end = points[i+1];
+      const dx = end.x - start.x;
+      const dy = end.y - start.y;
+      const curvature = Math.min(Math.abs(dy)/2, 40);
+      const d = `M ${start.x} ${start.y + 10} C ${start.x + dx/2} ${start.y + 10 - curvature}, ${start.x + dx/2} ${end.y + 10 - curvature}, ${end.x} ${end.y + 10}`;
+      path.setAttribute("d", d);
+      path.setAttribute("stroke", start.color);
+      path.setAttribute("stroke-width", 2);
+      path.setAttribute("fill", "none");
+      path.setAttribute("marker-end", "url(#arrowhead)");
+      connectorSvg.appendChild(path);
+    }
+  }
+}
+
+// Arrowhead definition
+const defs = document.createElementNS("http://www.w3.org/2000/svg","defs");
+const marker = document.createElementNS("http://www.w3.org/2000/svg","marker");
+marker.setAttribute("id","arrowhead");
+marker.setAttribute("markerWidth","10");
+marker.setAttribute("markerHeight","7");
+marker.setAttribute("refX","10");
+marker.setAttribute("refY","3.5");
+marker.setAttribute("orient","auto");
+const polygon = document.createElementNS("http://www.w3.org/2000/svg","polygon");
+polygon.setAttribute("points","0 0, 10 3.5, 0 7");
+polygon.setAttribute("fill","#1e90ff");
+marker.appendChild(polygon);
+defs.appendChild(marker);
+connectorSvg.appendChild(defs);
+
+// Zoom functionality
+let zoomLevel = 1;
+const minZoom = 0.5;
+const maxZoom = 2;
+
+// Desktop: Ctrl + wheel zoom
+timelineContainer.addEventListener('wheel', e => {
+  if (e.ctrlKey) {
+    e.preventDefault();
+    zoomLevel -= e.deltaY * 0.001;
+    zoomLevel = Math.min(Math.max(zoomLevel, minZoom), maxZoom);
+    timelineWrapper.style.transform = `scaleX(${zoomLevel})`;
+    connectorSvg.style.transform = `scaleX(${zoomLevel})`;
+    yearOverview.style.transform = `scaleX(${zoomLevel})`;
+    document.querySelectorAll('.timeline-year').forEach(y => y.style.transform = `scaleX(${1/zoomLevel})`);
+  }
+});
+
+// Mobile pinch-to-zoom
+let initialDistance = null;
+let initialZoom = zoomLevel;
+
+timelineContainer.addEventListener('touchstart', e => {
+  if (e.touches.length === 2) {
+    e.preventDefault();
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    initialDistance = Math.abs(dx);
+    initialZoom = zoomLevel;
+  }
+}, {passive: false});
+
+timelineContainer.addEventListener('touchmove', e => {
+  if (e.touches.length === 2 && initialDistance) {
+    e.preventDefault();
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const currentDistance = Math.abs(dx);
+    const scaleChange = currentDistance / initialDistance;
+    zoomLevel = initialZoom * scaleChange;
+    zoomLevel = Math.min(Math.max(zoomLevel, minZoom), maxZoom);
+    timelineWrapper.style.transform = `scaleX(${zoomLevel})`;
+    connectorSvg.style.transform = `scaleX(${zoomLevel})`;
+    yearOverview.style.transform = `scaleX(${zoomLevel})`;
+    document.querySelectorAll('.timeline-year').forEach(y => y.style.transform = `scaleX(${1/zoomLevel})`);
+  }
+}, {passive: false});
+
+timelineContainer.addEventListener('touchend', e => {
+  if (e.touches.length < 2) {
+    initialDistance = null;
+  }
 });
 </script>
 </body>
