--- a/experience.html
+++ b/experience.html
@@ -221,12 +221,12 @@ const roleColors = {
 };
 
 const experiences = [
-  { title: "Technical Consultant / Implementation Specialist", company: "EMC Thailand", startYear: 2006, endYear: 2007, roleType: "Implementation", logo: "emc-thailand-logo.png", details: `<ul><li>Provided technical consultancy and delivered solutions across APJ region.</li></ul>` },
-  { title: "Implementation Delivery Specialist", company: "EMC India", startYear: 2007, endYear: 2010, roleType: "Implementation", logo: "emc-india-logo.png", details: `<ul><li>Deployed backup & recovery solutions in South Asia.</li></ul>` },
-  { title: "Senior Implementation Delivery Specialist", company: "EMC Middle East", startYear: 2010, endYear: 2013, roleType: "Implementation", logo: "emc-logo.png", details: `<ul><li>Implemented backup & recovery systems in GCC region.</li></ul>` },
-  { title: "Senior Advisor / Senior Solutions Architect", company: "Dell EMC Middle East", startYear: 2013, endYear: 2018, roleType: "Architect", logo: "dell-emc-logo.png", details: `<ul><li>Delivered tailored data protection solutions integrating AI.</li></ul>` },
-  { title: "Consultant Solutions Architect", company: "Dell Technologies", startYear: 2018, endYear: 2024, roleType: "Architect", logo: "dell-logo.png", details: `<ul><li>Engaged clients for hybrid cloud integration and compliance.</li></ul>` },
-  { title: "Founder & Principal Consultant", company: "Vivanka Inc.", startYear: 2024, endYear: 2025, roleType: "Founder", logo: "vivanka-logo.png", details: `<ul><li>Consulting for Canadian enterprises on modernizing backup and cyber recovery.</li></ul>` }
+  { title: "Technical Consultant / Implementation Specialist", company: "EMC Thailand", startYear: 2006, endYear: 2007, roleType: "Implementation", logo: "images/emc-logo.png", details: `<ul><li>Provided technical consultancy and delivered solutions across APJ region.</li></ul>` },
+  { title: "Implementation Delivery Specialist", company: "EMC India", startYear: 2007, endYear: 2010, roleType: "Implementation", logo: "images/emc-logo.png", details: `<ul><li>Deployed backup & recovery solutions in South Asia.</li></ul>` },
+  { title: "Senior Implementation Delivery Specialist", company: "EMC Middle East", startYear: 2010, endYear: 2013, roleType: "Implementation", logo: "images/emc-logo.png", details: `<ul><li>Implemented backup & recovery systems in GCC region.</li></ul>` },
+  { title: "Senior Advisor / Senior Solutions Architect", company: "Dell EMC Middle East", startYear: 2013, endYear: 2018, roleType: "Architect", logo: "images/dell-logo.png", details: `<ul><li>Delivered tailored data protection solutions integrating AI.</li></ul>` },
+  { title: "Consultant Solutions Architect", company: "Dell Technologies", startYear: 2018, endYear: 2024, roleType: "Architect", logo: "images/dell-logo.png", details: `<ul><li>Engaged clients for hybrid cloud integration and compliance.</li></ul>` },
+  { title: "Founder & Principal Consultant", company: "Vivanka Inc.", startYear: 2024, endYear: 2025, roleType: "Founder", logo: "images/vivanka-logo.png", details: `<ul><li>Consulting for Canadian enterprises on modernizing backup and cyber recovery.</li></ul>` }
 ];
 
 function yearToLeft(year) {
